<resources>
    <string name="app_name">Movies</string>
    <string name="sort_movies">Sort Movies</string>
    <string name="search_movies">Search Movies</string>

    <string name="order_movies_by_popular_movies">Popular Movies</string>
    <string name="order_movies_by_top_rated_movies">Top Rated Movies</string>
    <string name="order_movies_by_upcoming_movies">Upcoming Movies</string>
    <string name="order_movies_by_now_playing_movies">Now Playing Movies</string>
    <string name="order_movies_by_trending_movies">Trending Movies</string>
    <string name="order_movies_by_title_asc">Order movies By title ASC</string>
    <string name="order_movies_by_title_desc">Order movies By title DESC</string>

    <string name="default_order">Default order</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="more_text">More</string>
    <string name="title_movies">Movies</string>
    <string name="menu_item_explore">Explore</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_movies">Movies</string>
    <string name="explore_title">Explore</string>
    <string name="search_title">Search</string>
    <string name="artist_profile">Artist Profile Image</string>
    <string name="read_more">Read more</string>
</resources>